//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.core;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.core";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "RejectionProto";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "spine/core/command.proto";
import "spine/core/enrichment.proto";
import "spine/core/version.proto";

// Rejection identifier.
message RejectionId {

    // The value is based upon the ID of the command, which caused the rejection.
    // It has the following format:
    //
    //      `<commandId>-reject`
    //
    string value = 1;
}

// A business rejection is a condition in business, which does not allow to
// satisfy a request or perform an operation.
//
// Examples: unsuccessful credit card validation, insufficient items in stock,
// incomplete order data.
//
// See `spine.base.Error` for definition of a technical error.
//
message Rejection {

    // The ID of the rejection.
    RejectionId id = 1 [(required) = true];

    // The instance of the rejection message generated by an aggregate or
    // another part of the business logic code.
    google.protobuf.Any message = 2 [(required) = true];

    // The context of the rejection.
    RejectionContext context = 3 [(required) = true];
}

// Meta-information for a rejection.
message RejectionContext {

    // The moment when the rejection message (not this message) was created.
    google.protobuf.Timestamp timestamp = 1 [(required) = true];

    // The command which generated the rejection.
    Command command = 2 [(required) = true];

    // The ID of the entity which generated the rejection.
    google.protobuf.Any producer_id = 3 [(required) = true];

    // The version of the entity which generated the rejection.
    Version version = 4 [(required) = true];

    // A stacktrace of from the code, which generated the rejection message (if available).
    string stacktrace = 5;

    // Optional enrichment of the rejection.
    Enrichment enrichment = 6;

    // An internal runtime attribute, which marks a rejection as external to the `BoundedContext`
    // in which the rejection is being processed.
    bool external = 7 [(internal) = true];
}
